# car-simulator

./: .gitignore  CMakeLists.txt  README.md  create_build.sh  run.sh
prototyping/: perlin_noise.py
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  Loader.cpp  Loader.hpp  Math.cpp  Math.hpp  Model.cpp  Model.hpp  Perlin.cpp  Perlin.hpp  RenderingSystem.cpp  RenderingSystem.hpp  UI.hpp  main.cpp  worldSystem.cpp  worldSystem.hpp
src/shaders/: shader.frag  shader.vert  shaderBlack.frag  shaderVertTexNorm.frag  shaderVertTexNorm.vert
